--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,18 +21,17 @@ jobs:
   lint-files:
     docker:
       - image: python:3.7.3-stretch
-      - image: overtrue/phplint:8.0 # specifically, a docker image used for linting php files
-        # auth:
-        #   username: lodakins
-        #   password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
+      - run: apk add --update curl
       - run:
           name: install dependencies
           command: |
             # Install hadolint
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
             chmod +x /bin/hadolint
+            apk add composer
+            composer require overtrue/phplint:^4.0 --dev -vvv
       - run:
           name: run lint
           command: |
