--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,7 @@ jobs:
             # Install hadolint
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
             chmod +x /bin/hadolint
-            wget -O /etc/apk/keys/phpearth.rsa.pub https://repos.php.earth/alpine/phpearth.rsa.pub
-            echo "https://repos.php.earth/alpine/v3.7" >> /etc/apk/repositories
-            apk add --no-cache php7.2
+            apk add --no-cache php7 php7-session
             # apk add --no-cache php7
             apk add composer
             composer require overtrue/phplint:^4.0 --dev -vvv
