--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ commands:
 jobs:
   lint-files:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: php:8.0.2-alpine3.12
     steps:
       - checkout
       - run: apk add --update curl
@@ -30,7 +30,6 @@ jobs:
             # Install hadolint
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
             chmod +x /bin/hadolint
-            apk add --no-cache php8 php8-session
             # apk add --no-cache php7
             apk add composer
             composer require overtrue/phplint:^4.0 --dev -vvv
