--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
   lint-files:
     docker:
       - image: php:8.0.2-alpine3.12
+    docker:
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - run: apk add --update curl
