--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             # This is linter for Dockerfiles
             hadolint Dockerfile
             # This is a linter for php source code linter: https://www.pylint.org
-            phplint ./esoft_portal  --extensions=php  --no-configuration
+            ./vendor/bin/phplint ./esoft_portal  --extensions=php  --no-configuration
 
   # build-backend:
   #   docker:
