--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,8 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name eksctl-udadevopscluster-nodegroup-nodegroup --region us-east-1
-            aws cloudformation delete-stack --stack-name eksctl-udadevopscluster-cluster --region us-east-1
-
+            aws cloudformation delete-stack --stack-name eksctl-udadevopscluster-nodegroup-ng-1 
+            aws cloudformation delete-stack --stack-name eksctl-udadevopscluster-cluster
 jobs:
   lint-files:
     docker:
@@ -95,7 +94,7 @@ jobs:
           command: |
             yum install -y curl tar gzip openssl
             curl --silent -o /usr/local/bin/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
-            chmod +x ./usr/local/bin/kubectl
+            chmod +x /usr/local/bin/kubectl
             mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
             echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
             kubectl version --short --client
