--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,7 @@ jobs:
             kubectl get svc
             kubectl apply -f .
             kubectl get pods,deploy,svc -o wide --show-labels
-
-      # Here's where you will add some code to rollback on failure
+        # rollback on failure
       - destroy-cluster
 
 workflows:
