--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,34 @@ jobs:
         # rollback on failure
       - destroy-cluster
 
+  deploy-green-version:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            yum install -y curl tar gzip openssl
+            curl --silent -o /usr/local/bin/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
+            chmod +x /usr/local/bin/kubectl
+            mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+            echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
+            kubectl version --short --client
+            curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+            mv /tmp/eksctl /usr/local/bin
+      - run:
+              name: Deploy Docker Application
+              command: |
+                aws eks --region us-east-1 update-kubeconfig --name udadevopscluster
+                cd backend/
+                ls -al
+                kubectl get svc
+                kubectl apply -f .
+                kubectl get pods,deploy,svc -o wide --show-labels
+            # rollback on failure
+      - destroy-cluster
+
 workflows:
   esoft-portal-v1:
     jobs:
