--- a/backend/deploy.yml
+++ b/backend/deploy.yml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: esoft-portal
-  labels:
-    app: esoft-portal
+  name: esoft_portal
+  namespace: default
+
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: esoft_portal
+      app: web
   template:
     metadata:
       labels:
-        app: esoft_portal
+        app: web
     spec:
       containers:
       - name: esoft_portal
@@ -37,17 +37,4 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 3
         ports:
-        - containerPort: 3111
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: esoft_portal
-spec:
-  type: LoadBalancer 
-  selector:
-    app: esoft_portal
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3111
+        - containerPort: 80
