--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
             kubectl version --short --client
             curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
             mv /tmp/eksctl /usr/local/bin
+            curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
       - run:
           name: Create EKS Cluster
@@ -100,6 +101,7 @@ jobs:
             kubectl version --short --client
             curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
             mv /tmp/eksctl /usr/local/bin
+            curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
       - attach_workspace:
           at: ~/
@@ -113,6 +115,8 @@ jobs:
             kubectl apply -f deploy.yml
             kubectl get pods,deploy,svc -o wide --show-labels
             kubectl apply -f service.yaml
+            kubectl get pods -o wide
+            kubectl get nodes -o wide
         # rollback on failure
       - destroy-cluster
 
