--- a/.circleci/cluster.yml
+++ b/.circleci/cluster.yml
@@ -7,7 +7,7 @@ metadata:
 
 managedNodeGroups:
   - name: ng-1
-    instanceType: t2.micro
+    instanceType: m5.xlarge
     desiredCapacity: 1
     volumeSize: 40
     ssh:
