--- a/backend/deploy.yml
+++ b/backend/deploy.yml
@@ -27,14 +27,27 @@ spec:
         livenessProbe:
           httpGet:
             path: /healthz
-            port: 3111
+            port: 8080
           initialDelaySeconds: 3
           periodSeconds: 3
         readinessProbe:
           httpGet:
             path: /healthz
-            port: 3111
+            port: 8080
           initialDelaySeconds: 3
           periodSeconds: 3
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: esoft-portal
+spec:
+  type: LoadBalancer 
+  selector:
+    app: web
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
