--- a/.circleci/cluster.yml
+++ b/.circleci/cluster.yml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: udadevopscluster
+  name: udadevopscluster1
   region: us-east-1
 
 managedNodeGroups:
