--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@ jobs:
             kubectl get pods -o wide
             kubectl get nodes -o wide
             kubectl get pods,deploy,svc -o wide --show-labels
+            kubectl get svc
         # rollback on failure
       - destroy-cluster
 
