--- a/backend/deploy.yml
+++ b/backend/deploy.yml
@@ -8,11 +8,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: web
+      app: esoft-portal
   template:
     metadata:
       labels:
-        app: web
+        app: esoft-portal
     spec:
       containers:
       - name: esoft-portal
@@ -27,17 +27,17 @@ spec:
         livenessProbe:
           httpGet:
             path: /healthz
-            port: 8080
+            port: 80
           initialDelaySeconds: 3
           periodSeconds: 3
         readinessProbe:
           httpGet:
             path: /healthz
-            port: 8080
+            port: 80
           initialDelaySeconds: 3
           periodSeconds: 3
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -46,8 +46,8 @@ metadata:
 spec:
   type: LoadBalancer 
   selector:
-    app: web
+    app: esoft-portal
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 8080
+      port: 8081
+      targetPort: 80
