--- a/.circleci/cluster.yml
+++ b/.circleci/cluster.yml
@@ -2,16 +2,13 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: udadevopscluster1
-  region: us-east-1
+  name: esoft-cluster
+  region: eu-west-1
 
-managedNodeGroups:
+nodeGroups:
   - name: ng-1
-    instanceType: m5.xlarge
+    instanceType: m5.large
     desiredCapacity: 1
-    volumeSize: 40
-    ssh:
-      allow: true # will use ~/.ssh/id_rsa.pub as the default ssh key
 
 cloudWatch:
   clusterLogging:
